# codeagent-py

./: .gitignore  ARCHITECTURE.md  DEMO.md  DESIGN_DECISIONS.md  IMPROVEMENT_SUMMARY.md  INTERVIEW_SHOWCASE.md  MIGRATION.md  PROJECT_SUMMARY.md  README.md  README_EN.md  UPDATE_SUMMARY.md  main.py  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 1a712334-5757-43d5-b97e-c26f67adb06b.json  802cbfd4-44e5-417a-9b4c-9e54af625a4d.json  845167e0-616b-4bd4-9aa9-8502e71f947b.json
.omc/state/: agent-replay-f89b9bb3-cdd2-45af-aacf-0870d32b9b49.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/8186f17d-d7e5-4006-95de-e594e26d601a/: session-started.json
.omc/state/sessions/f89b9bb3-cdd2-45af-aacf-0870d32b9b49/: session-started.json
src/codeagent/: __init__.py  __main__.py
src/codeagent/cli/: main.py
src/codeagent/cli/commands/: ask.py  eval.py  init.py  mcp.py  resume.py  sessions.py
src/codeagent/config/: schema.py  writer.py
src/codeagent/context/: __init__.py  builder.py  memory.py  profile.py
src/codeagent/eval/: harness.py  report.py  scoring.py  types.py
src/codeagent/eval/benchmarks/: instructions.yaml  multi_file_refactor.yaml  simple_edit.yaml  test_driven_fix.yaml
src/codeagent/loop/: guards.py
src/codeagent/mcp/: __init__.py  client.py  extension.py  presets.py
src/codeagent/policy/: command.py  engine.py  gateway.py  path.py  types.py
src/codeagent/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  types.py
src/codeagent/runtime/: events.py  loop.py  session.py  tools.py  types.py
src/codeagent/trace/: __init__.py  writer.py
src/oricode/: __init__.py  __main__.py
src/oricode/cli/: main.py
src/oricode/cli/commands/: ask.py  eval.py  init.py  mcp.py  resume.py  sessions.py
src/oricode/config/: loader.py  schema.py
src/oricode/eval/: loader.py  scoring.py  types.py
src/oricode/eval/benchmarks/: security.yaml
src/oricode/loop/: failure.py  guards_ext.py  testfile.py  types.py
src/oricode/mcp/: __init__.py  client.py
src/oricode/policy/: approval.py  path.py
src/oricode/providers/: __init__.py  anthropic_provider.py
src/oricode/runtime/: events.py  extensions.py  session.py  types.py
src/oricode/trace/: resume.py
src/oricode/util/: __init__.py  workspace.py
tests/: conftest.py
tests/integration/: test_session.py
tests/unit/: test_cli.py  test_config.py  test_context.py  test_eval.py  test_events.py  test_loop.py  test_mcp.py  test_policy.py  test_profile.py  test_providers.py  test_tool_safety.py  test_trace.py
